--- a/package.json
+++ b/package.json
@@ -1,20 +1,26 @@
-{
-  "name": "zhihu-hot",
-  "version": "1.0.0",
-  "description": "爬取知乎热榜",
-  "main": "index.js",
-  "scripts": {
-    "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "siwuxie",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gausszhou/spider-zhihu-hot/issues"
-  },
-  "homepage": "https://github.com/gausszhou/spider-zhihu-hot#readme",
-  "dependencies": {
-    "puppeteer": "^24.7.2"
-  }
+﻿{
+    "name":  "spider-zhihu-hot",
+    "version":  "1.0.0",
+    "description":  "爬取知乎热榜",
+    "main":  "index.js",
+    "scripts":  {
+                    "start":  "node src/index.js",
+                    "test":  "echo \"Error: no test specified\" \u0026\u0026 exit 1"
+                },
+    "keywords":  [
+
+                 ],
+    "author":  "siwuxie",
+    "license":  "ISC",
+    "bugs":  {
+                 "url":  "https://github.com/SiwuXue/zhihu-hot/issues"
+             },
+    "homepage":  "https://github.com/SiwuXue/zhihu-hot#readme",
+    "dependencies":  {
+                         "puppeteer":  "^24.7.2"
+                     },
+    "repository":  {
+                       "type":  "git",
+                       "url":  "https://github.com/SiwuXue/zhihu-hot.git"
+                   }
 }
