修改定时每三小时一次

--- a/.github/workflows/zhihu-hot.yml
+++ b/.github/workflows/zhihu-hot.yml
@@ -2,7 +2,7 @@
 
 on:
   schedule:
-    - cron: "0 1 * * *"
+    - cron: "0 */3 * * *"
   workflow_dispatch:
 
 permissions:
@@ -70,3 +70,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+
