--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
+    "extract": "node src/extract-hotlist.js",
     "test": "echo \"Error: no test specified\" \u0026\u0026 exit 1"
   },
   "keywords": [],
